finalize trader draft, start testing